--- a/.gitconfig
+++ b/.gitconfig
@@ -1,3 +1,3 @@
-# npm using https for git
+# npm using http for git
 git config --global url."http://github.com/".insteadOf git@github.com:
 git config --global url."http://".insteadOf git://
